Improve exception reporting
Currently exceptions are only sent in aggregate every half an hour.
This makes it much harder to corelate them with other telemetry
events as they are missing a timestamp.

This change will:

* report each exception as a separate event. To avoid
  flood of reports when an exception very frequent there are two new
  mechanisms to limit the rate:

  1. Each unique exception, as defined by stable signature, has an
     allowance of reports that it will always be uploaded (currently set
     to 2). Past allowance, only a diminishing number of such reports
     will be guaranteed to be uploaded, with others being progressively
     skipped unless their index (per signature) is a power of 2.
     Skipped reports may may be uploaded if reported exception as below
     the defined rate (10 reports per 10 minutes).

  2. Skipped reports are subject to a rate limit of a sliding window of
     10 reports in any 10 minutes. The limit is applied to all exception
     reports, not per stable signature.

* Include report ID in the telemetry event (if uploaded)

* Clean up uploaded fields in exception reports to include some of
  currently missing feilds, like "sessionID" or "last.action"

Change-Id: I797d62d1783c0263d8728a4affb75e39e726d1af
Bug: 232137523
Test: Added ExceptionRateLimiterTest

GitOrigin-RevId: 98bac0c388fd3875160ca6c8a5004d81a3181679